terminadas paginas empleados, contactos y newsletter

--- a/index.html
+++ b/index.html
@@ -60,5 +60,26 @@
         </section>
         <!-- TODO - Video de ejemplo -->
     </main>
+    <footer class="footer text-white">
+        <div class="container-fluid">
+          <div class="footer-line row">
+            <div class="col-md-6">
+              <h5 class="display-5">Contacto</h5>
+              <p class="fs-4">Teléfono: +366 123 XXXX</p>
+              <p class="fs-4">Email: liansinchez00@gmail.com</p>
+            </div>
+            <div class="col-md-6">
+              <h5 class="display-5">Enlaces</h5>
+              <ul class="list-unstyled">
+                <li><a class="nav-item link-nav" href="../pages/productos.html">Productos</a></li>
+                <li><a class="nav-item link-nav" href="../pages/empleados.html">Empleados</a></li>
+                <li><a class="nav-item link-nav" href="../pages/newsletter.html">Newsletter</a></li>
+                <li><a class="nav-item link-nav" href="../pages/contacto.html">Contactos</a></li>
+              </ul>
+            </div>
+          </div>
+          <p class="text-center fs-3">© 2023 Lian Ivan Sinchez</p>
+        </div>
+      </footer>
 </body>
 </html>
