--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="brand-link display-4" href="#">Los Cuatro Alamos</a>
+            <a class="brand-link display-4" href="../index.html">Los Cuatro Alamos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,32 +39,62 @@
         <section class="miembros-section">
             <h5 class="text-center text-dark">Nuestros lideres</h5>
             <div class="admins-section">
-                <div class="usercard">
+                <div class="usercard hover-animation">
                     <img src="../imgs/founder1.jpg" alt="">
                     <h5 class="text-center">Gael Huertas</h5>
-                    <p>Lider de marketing</p>
+                    <p class="text-center">Lider de marketing</p>
                 </div>
-                <div class="usercard">
+                <div class="usercard hover-animation">
                     <img src="../imgs/founder2.jpg" alt="">
                     <h5 class="text-center">Julian Martos</h5>
-                    <p>Community Manager</p>
+                    <p class="text-center">Community Manager</p>
                 </div>
-                <div class="usercard">
+                <div class="usercard hover-animation">
                     <img src="../imgs/founder3.jpg" alt="">
                     <h5 class="text-center">Dario Caro</h5>
                     <p class="text-center">Lider chef</p>
                 </div>
             </div>
-            <div>
-                <img src="../imgs/" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+            <h5 class="text-center text-dark">Nuestros Empleados</h5>
+            <div class="employee-section">
+                <div class="usercard hover-animation">
+                    <img src="../imgs/employee1.jpg" alt="">
+                    <h5 class="text-center display-6">Lorena Martinez</h5>
+                    <p class="text-center">Panadera Oficial</p>
+                </div>
+                <div class="usercard hover-animation">
+                    <img src="../imgs/employee2.jpg" alt="">
+                    <h5 class="text-center">Valeria Rodriguez</h5>
+                    <p class="text-center">Panadero Oficial</p>
+                </div>
+                <div class="usercard hover-animation">
+                    <img src="../imgs/employee3.jpg" alt="">
+                    <h5 class="text-center">Luis Caro</h5>
+                    <p class="text-center">Panadero Oficial</p>
+                </div>
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer class="footer text-white">
+        <div class="container-fluid">
+          <div class="footer-line row">
+            <div class="col-md-6">
+              <h5 class="display-5">Contacto</h5>
+              <p class="fs-4">Teléfono: +366 123 XXXX</p>
+              <p class="fs-4">Email: liansinchez00@gmail.com</p>
+            </div>
+            <div class="col-md-6">
+              <h5 class="display-5">Enlaces</h5>
+              <ul class="list-unstyled">
+                <li><a class="nav-item link-nav" href="../pages/productos.html">Productos</a></li>
+                <li><a class="nav-item link-nav" href="../pages/empleados.html">Empleados</a></li>
+                <li><a class="nav-item link-nav" href="../pages/newsletter.html">Newsletter</a></li>
+                <li><a class="nav-item link-nav" href="../pages/contacto.html">Contactos</a></li>
+              </ul>
+            </div>
+          </div>
+          <p class="text-center fs-3">© 2023 Lian Ivan Sinchez</p>
+        </div>
+      </footer>
 </body>
 </html>
