--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -31,112 +31,40 @@
         </nav>
     </header>
     <main>
-    <!-- newsletter config start -->
-    <section class="newsletter-wrapper">
-        <div class="newsletter-box">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci reiciendis rerum corporis veniam iure mollitia architecto dolorum officiis est eveniet, modi dolore a debitis impedit! Unde consectetur quisquam, quam atque quis natus eligendi dolorem, vitae fugit iure delectus alias laboriosam voluptas dicta illum, officiis recusandae nam. Quo repudiandae provident nulla saepe dolores in ipsa culpa autem, labore animi id soluta at repellat optio nesciunt quas et accusamus consequatur impedit. Totam ex accusamus velit dolorum aut dicta hic praesentium dolorem modi maxime voluptas quaerat dignissimos veritatis dolore saepe officia doloribus, quas omnis quia ipsum maiores neque magnam. Non magnam rerum possimus quos iure omnis quia distinctio aspernatur molestiae, blanditiis magni eaque tempore officia, ipsam nobis perspiciatis, commodi eos cumque. Quibusdam tempora voluptatem reprehenderit praesentium odio deserunt mollitia corrupti aut saepe quia, quo libero neque suscipit nulla vel labore iusto quis facilis aliquam voluptas eveniet. Facilis neque expedita officia et nemo, temporibus iusto cupiditate ullam quia eaque aspernatur similique consectetur culpa fuga aliquid odio quis accusantium, autem aperiam, magni accusamus. Quis, a nobis? Saepe dignissimos iure quo quaerat mollitia impedit ab in expedita repellendus porro deleniti reprehenderit cum labore accusantium quidem dolore libero nemo praesentium corporis, maxime quibusdam consequatur. Ea, fuga rem.
-                </p>
-            <div class="newsletter-form">
-                <form action="/" class="form-login">
-                    <label for="username" class="">Nombre</label>
-                        <input type="username" class="" id="passwrd" placeholder="Introducir nombre">
-                    <label for="e-mail">E-mail</label>
-                        <input type="email" placeholder="Introducir E-mail">
-
-                    <input type="submit" value="Submit" class="submit-btn">
-                </form>
+        <section class="bg-newsletter">
+            <div class="container-fluid">
+                <div class="container-fluid newsletter-box p-5">
+                    <h3>Suscribite hoy a nuestro Newsletter</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam adipisci vel rem repellat eveniet! Voluptatibus ab quia obcaecati omnis ex! Officia in minus, voluptate quisquam, consectetur modi quaerat, est perferendis ad nam eveniet ex saepe voluptatibus iure totam delectus qui nulla maxime harum neque. Doloribus officiis facilis deleniti perferendis modi.</p>
+                    <form class="d-flex flex-column" action="">
+                        <label class="mb-3" for="">Email</label>
+                        <input placeholder="Tu email acá" type="text">
+                        <button class="button-newsletter mt-3" type="submit">Suscribirme</button>
+                    </form>
+                </div>
             </div>
-        </div>
-    </section>
-    <!-- newsletter config end -->
+        </section>
     </main>
-
-    <footer>
-        <div class="container">
-            <div class="footer-top">
-                <div class="row">
-                    <div class="col-md-6 col-lg-3 about-footer">
-                        <h3>Lorem Ipsum dummy text </h3>
-                        <ul>
-                            <li><a href="tel:(010) 1234 4321"><i class="fas fa-phone fa-flip-horizontal"></i>(010) 1234 4321</a></li>
-                            <li><i class="fas fa-map-marker-alt"></i>
-                                1 / 105 Bay Lights,
-                                <br/>Lorem Ipsum,
-                                <br/>LIC 3201
-                            </li>
-                        </ul>
-                        <a href="" class="btn red-btn">Book Now</a>
-                    </div>
-                    <div class="col-md-6 col-lg-2 page-more-info">
-                        <div class="footer-title">
-                            <h4>Page links</h4>
-                        </div>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Testimonial</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-    
-                    <div class="col-md-6 col-lg-3 page-more-info">
-                        <div class="footer-title">
-                            <h4>More Info</h4>
-                        </div>
-                        <ul>
-                            <li><a href="#">Lorem ipsum</a></li>
-                            <li><a href="#">Dolor sit amet</a></li>
-                            <li><a href="#">Consectetur Adipisicing </a></li>
-                            <li><a href="#">Ed do eiusmod tempor incididunt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 col-lg-4 open-hours">
-                        <div class="footer-title">
-                            <h4>Open hours</h4>
-                            <ul class="footer-social">
-                                <li><a href="" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-    
-                            </ul>
-                        </div>
-                        <table class="table">
-                            <tbody>
-                                <tr>
-                                    <td><i class="far fa-clock"></i>Monday Thursday</td>
-                                    <td>9:00am - 5:00pm</td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-clock"></i>Friday</td>
-                                    <td>9:00am - 4:00pm</td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-clock"></i>Sturday</td>
-                                    <td>9:00am - 1:30pm</td>
-                                </tr>
-                                <tr>
-                                    <td><i class="far fa-clock"></i>Sunday</td>
-                                    <td>9:30am - 12:00pm</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+    <footer class="footer text-white">
+        <div class="container-fluid">
+          <div class="footer-line row">
+            <div class="col-md-6">
+              <h5 class="display-5">Contacto</h5>
+              <p class="fs-4">Teléfono: +366 123 XXXX</p>
+              <p class="fs-4">Email: liansinchez00@gmail.com</p>
             </div>
-            <hr>
-            <div class="footer-bottom">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a href="">Privacy policy</a>
-                    </div>
-                    <div class="col-sm-8">
-                        <p>Lorem ipsum dolor sit amet @ 2019 All rights reserved</p>
-                    </div>
-                </div>
+            <div class="col-md-6">
+              <h5 class="display-5">Enlaces</h5>
+              <ul class="list-unstyled">
+                <li><a class="nav-item link-nav" href="../pages/productos.html">Productos</a></li>
+                <li><a class="nav-item link-nav" href="../pages/empleados.html">Empleados</a></li>
+                <li><a class="nav-item link-nav" href="../pages/newsletter.html">Newsletter</a></li>
+                <li><a class="nav-item link-nav" href="../pages/contacto.html">Contactos</a></li>
+              </ul>
             </div>
+          </div>
+          <p class="text-center fs-3">© 2023 Lian Ivan Sinchez</p>
         </div>
-    </footer>
+      </footer>
 </body>
 </html>
