--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="brand-link display-4" href="#">Los Cuatro Alamos</a>
+            <a class="brand-link display-4" href="../index.html">Los Cuatro Alamos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
             </button>
@@ -37,13 +37,12 @@
             <iframe class="container-fluid" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24827.250548759952!2d-68.17045322568362!3d-38.93754499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a3335a7826929%3A0x988f06b7378fb7e0!2sBuenos%20Caprichos!5e0!3m2!1ses-419!2sar!4v1686533774392!5m2!1ses-419!2sar" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <section class="bg-form container-fluid d-flex justify-content-center align-items-center">
-            <div class="flex-form">
+            <div class="flex-form container-fluid w-75">
                     <div class="text-start info-box">
                         <div class="d-flex flex-column">
-                            <h3 class="display-3">Info Contactos</h3>
+                            <h3 class="text-center">Info Contactos</h3>
                             <p class="text-white"><b>Telefono:</b> +366 123 XXXX</p>
                             <p class="text-white"><b>Email:</b> liansinchez00@gmail.com</p>
-                            <h3 class="display-3">Nuestras redes</h3>
                             <div class="d-flex flex-icons">
                                 <ion-icon name="logo-facebook"></ion-icon>
                                 <ion-icon name="logo-instagram"></ion-icon>
