cambios a todo en la carpeta pages e index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="bg-intro-content">
               <h1 class="display-1">Los Cuatro Alamos</h1>
               <p>Panadería familiar</p>
-              <a href="#" class="btn-bg btn-dark">Haga su pedido hoy</a>
+              <a href="../proyectocoder/pages/contacto.html" class="btn-bg btn-dark">Haga su pedido hoy</a>
             </div>
           </section>
         <section class="container-fluid container-intro">
@@ -54,7 +54,7 @@
                 <div class="d-flex flex-column align-items-center">
                     <h5 class="display-6 text-center">Abierto las 24 horas</h5>
                     <p class="h3 text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, atque.</p>
-                    <iframe class="text-center" width="560" height="315" src="https://www.youtube.com/embed/G3LmiPpjMgY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe class="text-center mb-5" width="560" height="315" src="https://www.youtube.com/embed/G3LmiPpjMgY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
