--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="brand-link display-4" href="../index.html">Los Cuatro Alamos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+                <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav navbar-links">
@@ -30,7 +30,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="content-wrap">
         <section class="empleados-cover container-fluid">
             <div class="text-center">
                 <h1>Unite a la mejor panadería de Argentina</h1>
@@ -40,17 +40,17 @@
             <h5 class="text-center text-dark">Nuestros lideres</h5>
             <div class="admins-section">
                 <div class="usercard hover-animation">
-                    <img src="../imgs/founder1.jpg" alt="">
+                    <img src="../imgs/founder1.jpg" alt="fundador1">
                     <h5 class="text-center">Gael Huertas</h5>
                     <p class="text-center">Lider de marketing</p>
                 </div>
                 <div class="usercard hover-animation">
-                    <img src="../imgs/founder2.jpg" alt="">
+                    <img src="../imgs/founder2.jpg" alt="fundador2">
                     <h5 class="text-center">Julian Martos</h5>
                     <p class="text-center">Community Manager</p>
                 </div>
                 <div class="usercard hover-animation">
-                    <img src="../imgs/founder3.jpg" alt="">
+                    <img src="../imgs/founder3.jpg" alt="fundador3">
                     <h5 class="text-center">Dario Caro</h5>
                     <p class="text-center">Lider chef</p>
                 </div>
@@ -58,17 +58,17 @@
             <h5 class="text-center text-dark">Nuestros Empleados</h5>
             <div class="employee-section">
                 <div class="usercard hover-animation">
-                    <img src="../imgs/employee1.jpg" alt="">
+                    <img src="../imgs/employee1.jpg" alt="empleado1">
                     <h5 class="text-center display-6">Lorena Martinez</h5>
                     <p class="text-center">Panadera Oficial</p>
                 </div>
                 <div class="usercard hover-animation">
-                    <img src="../imgs/employee2.jpg" alt="">
+                    <img src="../imgs/employee2.jpg" alt="empleado2">
                     <h5 class="text-center">Valeria Rodriguez</h5>
                     <p class="text-center">Panadero Oficial</p>
                 </div>
                 <div class="usercard hover-animation">
-                    <img src="../imgs/employee3.jpg" alt="">
+                    <img src="../imgs/employee3.jpg" alt="empleado3">
                     <h5 class="text-center">Luis Caro</h5>
                     <p class="text-center">Panadero Oficial</p>
                 </div>
