--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -16,9 +16,9 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="brand-link display-4" href="#">Los Cuatro Alamos</a>
+            <a class="brand-link display-4" href="../index.html">Los Cuatro Alamos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+                <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav navbar-links">
@@ -30,8 +30,8 @@
             </div>
         </nav>
     </header>
-    <main>
-        <section class="bg-newsletter">
+    <main class="bg-newsletter">
+        <section class="d-flex justify-content-center align-items-center">
             <div class="container-fluid">
                 <div class="container-fluid newsletter-box p-5">
                     <h3>Suscribite hoy a nuestro Newsletter</h3>
