--- a/pages/productos.html
+++ b/pages/productos.html
@@ -16,9 +16,9 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="brand-link display-4" href="#">Los Cuatro Alamos</a>
+            <a class="brand-link display-4" href="../index.html">Los Cuatro Alamos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+              <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav navbar-links">
@@ -30,27 +30,82 @@
             </div>
         </nav>
     </header>
-    
+    <main class="bg-products content-wrap">
+      <section class="gallery-products">
+        <div class="p-5">
+          <div class="container-fluid productos-gallery">
+            <div class="product-card">
+              <a href="#"><img src="../imgs/producto1.jpg" alt="panbimbo.jpg"></a>
+              <div class="p-2">
+                <p>Kilo de pan fresco</p>
+                <span>$368,89</span>
+              </div>
+            </div>
+            <div class="product-card">
+              <div>
+                <a href="#"><img src="../imgs/producto2.png" alt="pastafrola.png"></a>
+                <div class="p-2">
+                  <p>Pasta frola</p>
+                  <span>$500 c/u</span>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div>
+                <a href="#"><img src="../imgs/producto3.png" alt="alfajoresdechocolate.png"></a>
+                <div class="p-2">
+                  <p>Alfajores de Chocolate</p>
+                  <span>$460</span>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <a href="#"><img src="../imgs/producto1.jpg" alt="panbimbo.jpg"></a>
+              <div class="p-2">
+                <p>Kilo de pan fresco</p>
+                <span>$368,89</span>
+              </div>
+            </div>
+            <div class="product-card">
+              <div>
+                <a href="#"><img src="../imgs/producto2.png" alt="pastafrola.png"></a>
+                <div class="p-2">
+                  <p>Pasta frola</p>
+                  <span>$500 c/u</span>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div>
+                <a href="#"><img src="../imgs/producto3.png" alt="alfajoresdechocolate.png"></a>
+                <div class="p-2">
+                  <p>Alfajores de Chocolate</p>
+                  <span>$460</span>
+                </div>
+              </div>
+            </div>
+      </section>
+    </main>
     <footer class="footer text-white">
-        <div class="container-fluid">
-          <div class="footer-line row">
-            <div class="col-md-6">
-              <h5 class="display-5">Contacto</h5>
-              <p class="fs-4">Teléfono: +366 123 XXXX</p>
-              <p class="fs-4">Email: liansinchez00@gmail.com</p>
-            </div>
-            <div class="col-md-6">
-              <h5 class="display-5">Enlaces</h5>
-              <ul class="list-unstyled">
-                <li><a class="nav-item link-nav" href="../pages/productos.html">Productos</a></li>
-                <li><a class="nav-item link-nav" href="../pages/empleados.html">Empleados</a></li>
-                <li><a class="nav-item link-nav" href="../pages/newsletter.html">Newsletter</a></li>
-                <li><a class="nav-item link-nav" href="../pages/contacto.html">Contactos</a></li>
-              </ul>
-            </div>
+      <div class="container-fluid">
+        <div class="footer-line row">
+          <div class="col-md-6">
+            <h5 class="display-5">Contacto</h5>
+            <p class="fs-4">Teléfono: +366 123 XXXX</p>
+            <p class="fs-4">Email: liansinchez00@gmail.com</p>
           </div>
-          <p class="text-center fs-3">© 2023 Lian Ivan Sinchez</p>
+          <div class="col-md-6">
+            <h5 class="display-5">Enlaces</h5>
+            <ul class="list-unstyled">
+              <li><a class="nav-item link-nav" href="../pages/productos.html">Productos</a></li>
+              <li><a class="nav-item link-nav" href="../pages/empleados.html">Empleados</a></li>
+              <li><a class="nav-item link-nav" href="../pages/newsletter.html">Newsletter</a></li>
+              <li><a class="nav-item link-nav" href="../pages/contacto.html">Contactos</a></li>
+            </ul>
+          </div>
         </div>
-      </footer>
+        <p class="text-center fs-3">© 2023 Lian Ivan Sinchez</p>
+      </div>
+    </footer>
 </body>
 </html>
