--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,11 +32,11 @@
         </nav>
     </header>
 <body>
-    <main class="bg-danger-subtle">
+    <main class="bg-form content-wrap">
         <div class="map-settings">
             <iframe class="container-fluid" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24827.250548759952!2d-68.17045322568362!3d-38.93754499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a3335a7826929%3A0x988f06b7378fb7e0!2sBuenos%20Caprichos!5e0!3m2!1ses-419!2sar!4v1686533774392!5m2!1ses-419!2sar" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <section class="bg-form container-fluid d-flex justify-content-center align-items-center">
+        <section class=" d-flex justify-content-center align-items-center">
             <div class="flex-form container-fluid w-75">
                     <div class="text-start info-box">
                         <div class="d-flex flex-column">
