--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="keywords" content="pan, panadería, panaderiaargentina, panaderos"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Newsletter | Cuatro Alamos</title>
         <link rel="shortcut icon" href="../imgs/favicon.ico" type="image/x-icon">
