--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -78,7 +78,7 @@
     </main>
     <footer class="footer text-white">
         <div class="container-fluid">
-          <div class="footer-line row">
+          <div class="row">
             <div class="col-md-6">
               <h5 class="display-5">Contacto</h5>
               <p class="fs-4">Teléfono: +366 123 XXXX</p>
@@ -94,8 +94,8 @@
               </ul>
             </div>
           </div>
-          <p class="text-center fs-3">© 2023 Lian Ivan Sinchez</p>
         </div>
+        <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
       </footer>
 </body>
 </html>
