--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Inicio | Cuatro Alamos</title>
-        <link rel="shortcut icon" href="../proyectocoder/imgs/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -44,17 +44,17 @@
             <div class="intro-p">
                 <div class="d-flex flex-column">
                     <h5 class="display-6 text-center text-white">Envios a todo el país</h5>
-                    <p class="h3 text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit..</p>
+                    <p class="h3 text-center text-white">Con nuestros productos llegando en los 30 minutos despues de tu pedido</p>
                 </div>
                 <div class="d-flex flex-column">
                     <h5 class="display-6 text-center text-white">Ingredientes elegidos con pasión a la cocina</h5>
-                    <p class="h3 text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, atque.</p>
+                    <p class="h3 text-center text-white">Para acompañar cada momento con familia y amigos</p>
                 </div>
             </div>
             <div class="intro-p">
                 <div class="d-flex flex-column align-items-center">
                     <h5 class="display-6 text-center">Abierto las 24 horas</h5>
-                    <p class="h3 text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, atque.</p>
+                    <p class="h3 text-center text-white">Para acompañar cada momento del día</p>
                     <iframe class="text-center mb-5" width="560" height="315" src="https://www.youtube.com/embed/G3LmiPpjMgY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
