--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="pan, panadería, panaderiaargentina, panaderos"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contacto | Cuatro Alamos</title>
-        <link rel="shortcut icon" href="../imgs/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="../imgs/favicon.png" type="image/x-icon">
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -33,66 +33,67 @@
         </nav>
     </header>
 <body>
-    <main class="bg-form content-wrap">
-        <div class="map-settings">
-            <iframe class="container-fluid" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24827.250548759952!2d-68.17045322568362!3d-38.93754499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a3335a7826929%3A0x988f06b7378fb7e0!2sBuenos%20Caprichos!5e0!3m2!1ses-419!2sar!4v1686533774392!5m2!1ses-419!2sar" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <section class=" d-flex justify-content-center align-items-center">
-            <div class="flex-form container-fluid w-75">
-                    <div class="text-start info-box">
-                        <div class="d-flex flex-column">
-                            <h3 class="text-center">Info Contactos</h3>
-                            <p class="text-white"><b>Telefono:</b> +366 123 XXXX</p>
-                            <p class="text-white"><b>Email:</b> liansinchez00@gmail.com</p>
-                            <div class="d-flex flex-icons">
-                                <ion-icon name="logo-facebook"></ion-icon>
-                                <ion-icon name="logo-instagram"></ion-icon>
+        <main class="bg-form content-wrap">
+            <div class="map-settings">
+                <iframe class="container-fluid" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24827.250548759952!2d-68.17045322568362!3d-38.93754499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a3335a7826929%3A0x988f06b7378fb7e0!2sBuenos%20Caprichos!5e0!3m2!1ses-419!2sar!4v1686533774392!5m2!1ses-419!2sar" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <section class=" d-flex justify-content-center align-items-center">
+                <div class="flex-form container-fluid w-75">
+                        <div class="text-start info-box">
+                            <div class="d-flex flex-column">
+                                <h3 class="text-center">Info Contactos</h3>
+                                <p class="text-white"><b>Telefono:</b> +366 123 XXXX</p>
+                                <p class="text-white"><b>Email:</b> liansinchez00@gmail.com</p>
+                                <div class="d-flex flex-icons">
+                                    <ion-icon name="logo-facebook"></ion-icon>
+                                    <ion-icon name="logo-instagram"></ion-icon>
+                                </div>
                             </div>
+                            <form class="me-xl-5 d-flex flex-column w-100">
+                                <label for="emailInput">Email</label>
+                                <input type="email" class="form-control" id="emailInput" placeholder="Email">
+                                <label for="nomcompleto">Nombre Completo</label>
+                                <input type="text" class="form-control" id="user_nombre" placeholder="Inserte nombre del remitente">
+                                <label for="direccionInput">Direccion</label>
+                                <input type="text" class="form-control" id="direccionInput" placeholder="1234 Manuel Belgrano...">
+                                <label for="msg_usuario_input">Mensaje</label>
+                                <input type="text" class="form-control" id="user_mensaje" placeholder="Inserte mensaje">
+                                <div class="form-row">
+                                    <label for="provinciaInput">Provincia</label>
+                                    <select id="provinciaInput" class="form-control">
+                                        <option selected>Elegir</option>
+                                        <option value="bsas">Buenos Aires</option>
+                                        <option value="caba">Ciudad Autónoma de Buenos Aires</option>
+                                        <option value="catamarca">Catamarca</option>
+                                        <option value="chaco">Chaco</option>
+                                        <option value="chubut">Chubut</option>
+                                        <option value="cordoba">Córdoba</option>
+                                        <option value="corrientes">Corrientes</option>
+                                        <option value="entre_rios">Entre Ríos</option>
+                                        <option value="formosa">Formosa</option>
+                                        <option value="jujuy">Jujuy</option>
+                                        <option value="la_pampa">La Pampa</option>
+                                        <option value="la_rioja">La Rioja</option>
+                                        <option value="mendoza">Mendoza</option>
+                                        <option value="misiones">Misiones</option>
+                                        <option value="neuquen">Neuquén</option>
+                                        <option value="rio_negro">Río Negro</option>
+                                        <option value="salta">Salta</option>
+                                        <option value="san_juan">San Juan</option>
+                                        <option value="san_luis">San Luis</option>
+                                        <option value="santa_cruz">Santa Cruz</option>
+                                        <option value="santa_fe">Santa Fe</option>
+                                        <option value="santiago_del_estero">Santiago del Estero</option>
+                                        <option value="tierra_del_fuego">Tierra del Fuego</option>
+                                        <option value="tucuman">Tucumán</option>
+                                    </select>
+                                </div>
+                                <button type="submit" class="btn btn-primary mt-3">Enviar</button>
+                            </form>
                         </div>
-                        <form class="me-xl-5 d-flex flex-column w-100">
-                            <label for="emailInput">Email</label>
-                            <input type="email" class="form-control" id="emailInput" placeholder="Email">
-                            <label for="nomcompleto">Nombre Completo</label>
-                            <input type="text" class="form-control" id="user_nombre" placeholder="Inserte nombre del remitente">
-                            <label for="direccionInput">Direccion</label>
-                            <input type="text" class="form-control" id="direccionInput" placeholder="1234 Manuel Belgrano...">
-                            <label for="msg_usuario_input">Mensaje</label>
-                            <input type="text" class="form-control" id="user_mensaje" placeholder="Inserte mensaje">
-                            <div class="form-row">
-                                <label for="provinciaInput">Provincia</label>
-                                <select id="provinciaInput" class="form-control select-provincia">
-                                    <option selected>Elegir</option>
-                                    <option value="bsas">Buenos Aires</option>
-                                    <option value="caba">Ciudad Autónoma de Buenos Aires</option>
-                                    <option value="catamarca">Catamarca</option>
-                                    <option value="chaco">Chaco</option>
-                                    <option value="chubut">Chubut</option>
-                                    <option value="cordoba">Córdoba</option>
-                                    <option value="corrientes">Corrientes</option>
-                                    <option value="entre_rios">Entre Ríos</option>
-                                    <option value="formosa">Formosa</option>
-                                    <option value="jujuy">Jujuy</option>
-                                    <option value="la_pampa">La Pampa</option>
-                                    <option value="la_rioja">La Rioja</option>
-                                    <option value="mendoza">Mendoza</option>
-                                    <option value="misiones">Misiones</option>
-                                    <option value="neuquen">Neuquén</option>
-                                    <option value="rio_negro">Río Negro</option>
-                                    <option value="salta">Salta</option>
-                                    <option value="san_juan">San Juan</option>
-                                    <option value="san_luis">San Luis</option>
-                                    <option value="santa_cruz">Santa Cruz</option>
-                                    <option value="santa_fe">Santa Fe</option>
-                                    <option value="santiago_del_estero">Santiago del Estero</option>
-                                    <option value="tierra_del_fuego">Tierra del Fuego</option>
-                                    <option value="tucuman">Tucumán</option>
-                                </select>
-                            </div>
-                            <button type="submit" class="btn btn-primary mt-3">Enviar</button>
-                        </form>
                     </div>
-                </div>
-        </section>
+            </section>
+        </main>
         <footer class="footer text-white">
             <div class="container-fluid">
               <div class="row">
