--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="pan, panadería, panaderiaargentina, panaderos"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos | Cuatro Alamos</title>
-    <link rel="shortcut icon" href="../imgs/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../imgs/favicon.png" type="image/x-icon">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
