arreglado el link principal del nav

--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -17,18 +17,20 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="brand-link display-4" href="../index.html">Los Cuatro Alamos</a>
+          <div class="navbar-main">
+            <a class="display-4" href="../index.html">Los Cuatro Alamos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <ul class="navbar-nav navbar-links">
-                    <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
-                    <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
-                    <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
-                    <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
-                </ul>
-            </div>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <ul class="navbar-nav navbar-links">
+                  <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
+                  <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
+                  <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
+                  <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
+              </ul>
+          </div>
+        </div>
         </nav>
     </header>
     <main class="content-wrap">
