--- a/pages/productos.html
+++ b/pages/productos.html
@@ -15,22 +15,24 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="brand-link display-4" href="../index.html">Los Cuatro Alamos</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <ul class="navbar-nav navbar-links">
-                    <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
-                    <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
-                    <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
-                    <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="navbar-main">
+        <a class="display-4" href="../index.html">Los Cuatro Alamos</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
+        </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <ul class="navbar-nav navbar-links">
+              <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
+              <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
+              <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
+              <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
+          </ul>
+      </div>
+    </div>
+    </nav>
+</header>
     <main class="bg-products content-wrap">
       <section class="gallery-products">
         <div class="p-5">
