--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="bg-intro-content container">
               <h1 class="display-1">Los Cuatro Alamos</h1>
               <p>Panadería familiar</p>
-              <a href="../proyectocoder/pages/contacto.html" class="btn-bg btn-dark">Haga su pedido hoy</a>
+              <a href="pages/contacto.html" class="btn-bg btn-dark">Haga su pedido hoy</a>
             </div>
           </section>
         <section class="container-fluid container-intro">
