Hechos retoques a los estilos de la pagina de newsletter, productos y nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
         </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav navbar-links">
               <li><a class="nav-item link-nav display-6" href="pages/productos.html">Productos</a></li>
               <li><a class="nav-item link-nav display-6" href="pages/empleados.html">Empleados</a></li>
@@ -32,36 +32,114 @@
       </div>
     </div>
     </nav>
-</header>
+  </header>
     <main>
         <section class="bg-intro">
             <div class="bg-intro-content container">
               <h1 class="display-1">Los Cuatro Alamos</h1>
               <p>Panadería familiar</p>
-              <a href="pages/contacto.html" class="btn-bg btn-dark">Haga su pedido hoy</a>
-            </div>
-          </section>
-        <section class="container-fluid container-intro">
-            <h1 class="d-flex justify-content-center align-content-center mt-3 display-3">Nuestras Tradiciones</h1>
-            <div class="intro-p">
-                <div class="d-flex flex-column">
-                    <h5 class="display-6 text-center text-white">Envios a todo el país</h5>
-                    <p class="h3 text-center text-white">Con nuestros productos llegando en los 30 minutos despues de tu pedido</p>
-                </div>
-                <div class="d-flex flex-column">
-                    <h5 class="display-6 text-center text-white">Ingredientes elegidos con pasión a la cocina</h5>
-                    <p class="h3 text-center text-white">Para acompañar cada momento con familia y amigos</p>
-                </div>
-            </div>
-            <div class="intro-p">
-                <div class="d-flex flex-column align-items-center">
-                    <h5 class="display-6 text-center">Abierto las 24 horas</h5>
-                    <p class="h3 text-center text-white">Para acompañar cada momento del día</p>
-                    <iframe class="text-center mb-5" width="560" height="315" src="https://www.youtube.com/embed/G3LmiPpjMgY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
             </div>
         </section>
-        <!-- TODO - Video de ejemplo -->
+        <section class="title-cover">
+          <div class="div-line">
+            <h2 class="display-4 text-dark text-center mt-5">Ofertas nuevas cada semana</h2>
+          </div>
+        </section>
+        <section class="container-fluid">
+          <div class="container-fluid sales-index">
+            <div class="card product-card">
+              <img class="card-img-top pb-3" src="imgs/products-pngs/product-1.png" alt="Card image cap">
+              <div class="card-body">
+                <div>
+                  <h5 class="card-title fs-3">Mix de Dulzura</h5>
+                  <p class="card-text text-dark fs-5">Pastafrola, medialunas y más (1 docena)</p>
+                  <span class="text-dark">$350</span>
+                </div>
+                <button class="main-btn"><a href="pages/productos.html">Ir a Productos</a></button>
+              </div>
+            </div>
+            <div class="card product-card">
+              <img class="card-img-top pb-3" src="imgs/products-pngs/product-2.png" alt="Card image cap">
+              <div class="card-body">
+                <div>
+                  <h5 class="card-title fs-3">Cheesecake Festivo</h5>
+                  <p class="card-text text-dark fs-5">Cheesecake bañado en chocolate y frutillas</p>
+                  <span class="text-dark">$350</span>
+                </div>
+                <button class="main-btn"><a href="pages/productos.html">Ir a Productos</a></button>
+              </div>
+            </div>
+            <div class="card product-card">
+              <img class="card-img-top pb-3" src="imgs/products-pngs/product-3.png" alt="Card image cap">
+              <div class="card-body">
+                <div>
+                  <h5 class="card-title fs-3">Cheesecake Tradicional</h5>
+                  <p class="card-text text-dark fs-5">Cheesecake con frutillas y pasta de maní</p>
+                  <span class="text-dark">$350</span>
+                </div>
+                <button class="main-btn"><a href="pages/productos.html">Ir a Productos</a></button>
+              </div>
+            </div>
+            <div class="card product-card">
+              <img class="card-img-top pb-3" src="imgs/products-pngs/product-4.png" alt="Card image cap">
+              <div class="card-body">
+                <div>
+                  <h5 class="card-title fs-3">Arte en Cupcake</h5>
+                  <p class="card-text text-dark fs-5">Cupcake de chocolate bañado en crema y frutillas (1 docena)</p>
+                  <span class="text-dark">$350</span>
+                </div>
+                <button class="main-btn"><a href="pages/productos.html">Ir a Productos</a></button>
+              </div>
+            </div>
+        </section>
+        <section class="title-cover">
+          <div class="div-line">
+            <h2 class="display-4 text-dark text-center mt-5">Nuestras tradiciones</h2>
+          </div>
+        </section>
+        <section class="container-fluid">
+          <div class="traditions-ad">
+            <div class="tradition-card text-center">
+              <div class="d-flex justify-content-center align-items-center flex-column">
+                <div class="card-icons">
+                <i class="fa-sharp fa-solid fa-truck fa-xl fs-2"></i>
+                </div>
+                <h5 class="text-dark display-6">Envios gratis a todo el país</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, fugit!</p>
+              </div>
+            </div>
+            <div class="tradition-card text-center">
+              <div class="d-flex justify-content-center align-items-center flex-column">
+                <div class="card-icons">
+                  <i class="fa-sharp fa-solid fa-kitchen-set fa-xl fs-2"></i>
+                </div>
+                <h5 class="text-dark display-6">Productos hechos con pasión por la cocina</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, fugit!</p>
+              </div>
+            </div>
+            <div class="tradition-card text-center">
+              <div class="d-flex justify-content-center align-items-center flex-column">
+                <div class="card-icons">
+                  <i class="fa-sharp fa-solid fa-fire-burner fa-lg fs-2"></i>
+                </div>
+                <h5 class="text-dark display-6">Deliciosas recetas</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, fugit!</p>
+              </div>
+            </div>
+        </section>
+        <section class="title-cover">
+          <div class="div-line">
+            <h2 class="display-4 text-dark text-center mt-5"></h2>
+          </div>
+        </section>
+        <section class="centerflex mb-5">
+          <div class="box-contact-index">
+            <h5 class="text-white text-center fs-1">¿Tenés alguna pregunta?</h5>
+            <div class="centerflex">
+              <button class="p-2" type="button"><a class="text-black" href="../proyectocoder/pages/contacto.html">Contactanos hoy</a></button>
+            </div>
+          </div>
+        </section>
     </main>
     <footer class="footer text-white">
       <div class="container-fluid">
