--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -35,7 +35,7 @@
     </header>
     <main class="content-wrap">
         <section class="empleados-cover container-fluid">
-            <div class="text-center filter-bg">
+            <div class="text-center filter-bg fs-6">
                 <h1>Unite a la mejor panadería de Argentina</h1>
             </div>
         </section>
