--- a/pages/productos.html
+++ b/pages/productos.html
@@ -33,61 +33,85 @@
     </div>
     </nav>
 </header>
-    <main class="bg-products content-wrap">
-      <section class="gallery-products">
-        <div class="p-5">
-          <div class="container-fluid productos-gallery">
-            <div class="product-card">
-              <a href="#"><img src="../imgs/producto1.jpg" alt="panbimbo.jpg"></a>
-              <div class="p-2">
-                <p>Kilo de pan fresco</p>
-                <span>$368,89</span>
-              </div>
-            </div>
-            <div class="product-card">
-              <div>
-                <a href="#"><img src="../imgs/producto2.png" alt="pastafrola.png"></a>
-                <div class="p-2">
-                  <p>Pasta frola</p>
-                  <span>$500 c/u</span>
-                </div>
-              </div>
-            </div>
-            <div class="product-card">
-              <div>
-                <a href="#"><img src="../imgs/producto3.png" alt="alfajoresdechocolate.png"></a>
-                <div class="p-2">
-                  <p>Alfajores de Chocolate</p>
-                  <span>$460</span>
-                </div>
-              </div>
-            </div>
-            <div class="product-card">
-              <a href="#"><img src="../imgs/producto1.jpg" alt="panbimbo.jpg"></a>
-              <div class="p-2">
-                <p>Kilo de pan fresco</p>
-                <span>$368,89</span>
-              </div>
-            </div>
-            <div class="product-card">
-              <div>
-                <a href="#"><img src="../imgs/producto2.png" alt="pastafrola.png"></a>
-                <div class="p-2">
-                  <p>Pasta frola</p>
-                  <span>$500 c/u</span>
-                </div>
-              </div>
-            </div>
-            <div class="product-card">
-              <div>
-                <a href="#"><img src="../imgs/producto3.png" alt="alfajoresdechocolate.png"></a>
-                <div class="p-2">
-                  <p>Alfajores de Chocolate</p>
-                  <span>$460</span>
-                </div>
-              </div>
-            </div>
+    <main class="content-wrap">
+      <section class="mb-3">
+        <div class="cover-products">
+          <div class="centerflex text-center">
+            <h1>Nuestros Productos</h1>
+          </div>
+        </div>
       </section>
+      <section class="product-showcase mb-5">
+        <h2 class="display-5 text-center text-dark mb-5 opacity-0-100">Sin conservantes • Envios gratis • Para compartir cuando quieras</h2>
+        <!-- producto 1 -->
+        <div class="mb-3">
+          <div class="column-products d-flex gap-5 justify-content-center align-items-center">
+            <div class="product-container">
+              <img src="../imgs/products-pngs/product-1.png" alt="" srcset="">
+            </div>
+            <div class="x-transition text-products-container">
+              <h2 class="text-dark">Mix Regional</h3>
+              <p class="fs-6">• Sabores de la patagonia</p>
+              <p class="fs-6">• Recetas regionales</p>
+              <p class="fs-6">• Mix totalmente Argentino</p>
+              <div class="mb-5">
+                <button class="main-btn" type="button"><a href="#">Añadir al Carrito</a></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- producto 2 -->
+        <div class="mb-3">
+          <div class="column-products-alt d-flex gap-5 justify-content-center align-items-center">
+            <div class="x-transitionNegative text-products-container">
+              <h2 class="text-dark">Cheesecake Festivo</h3>
+                <p class="fs-6">• Ideal para reuniones empresariales</p>
+                <p class="fs-6">• Té con amigas</p>
+                <p class="fs-6">• Elaborado con los mejores productos</p>
+              <div class="">
+                <button class="main-btn"  type="button"><a href="#">Añadir al Carrito</a></button>
+              </div>
+            </div>
+            <div class="product-container-alt ">
+              <img src="../imgs/products-pngs/product-2.png" alt="" srcset="">
+            </div>
+          </div>
+        </div>
+        <!-- producto 3 -->
+        <div class="mb-3">
+          <div class="column-products d-flex gap-5 justify-content-center align-items-center">
+            <div class="product-container">
+              <img src="../imgs/products-pngs/product-3.png" alt="" srcset="">
+            </div>
+            <div class="x-transition text-products-container">
+              <h2 class="text-dark">Cheesecake Tradicional</h3>
+                <p class="fs-6">• Receta de la abuela</p>
+                <p class="fs-6">• Elaborado con la tradición que nos caracteriza</p>
+                <p class="fs-6">• Regala un toque de dulzura con el más exquisito sabor</p>
+              <div class="mb-5">
+                <button class="main-btn" type="button"><a href="#">Añadir al Carrito</a></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- producto 4 -->
+        <div class="mb-3">
+          <div class="column-products-alt d-flex gap-5 justify-content-center align-items-center">
+            <div class="x-transitionNegative text-products-container">
+              <h2 class="text-dark">Arte en Cupcake</h3>
+                <p class="fs-6">• Diseños a pedido del cliente</p>
+                <p class="fs-6">• Realizado por nuestros mejores artistas en Cupcake</p>
+                <p class="fs-6">• Regala felicidad</p>
+              <div>
+                <button class="main-btn" type="button"><a href="#">Añadir al Carrito</a></button>
+              </div>
+            </div>
+            <div class="product-container-alt ">
+              <img src="../imgs/products-pngs/product-4.png" alt="" srcset="">
+            </div>
+          </div>
+        </div>
+    </section>
     </main>
     <footer class="footer text-white">
       <div class="container-fluid">
